# clipcompose

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: design.md
examples/: demo-all-templates-assembly.yaml  demo-all-templates.yaml  generate_demo_clips.py  template-assembly.yaml  template-cuts.yaml  template-spatial.yaml
src/clipcompose/: __init__.py  assemble_cli.py  assembly.py  assembly_manifest.py  atoms.py  cli.py  common.py  cut.py  cut_cli.py  cuts_manifest.py  main.py  manifest.py  overlays.py  sections.py  transcribe.py  transcribe_cli.py
tests/: conftest.py  test_assembly.py  test_assembly_manifest.py  test_atoms.py  test_common.py  test_cut.py  test_cuts_manifest.py  test_main.py  test_manifest.py  test_overlays.py  test_sections.py  test_transcribe.py
